@@ -1,3 +1,9 @@
+2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
+
+	Fixes #336286
+
+	* capplet-util.c (capplet_init): switched from popt to GOptionContext.
+
 2007-01-05  Christian Persch <chpe@gnome.org>
 
 	Fixes #393117
